@@ -1,4 +1,5 @@
-Feb 09, 2014 - Changed constructor for ChannelDefinition box.  Removed support
+Mar 06, 2014 - Added Cinema2K write support.
+    Changed constructor for ChannelDefinition box.  Removed support
     for Python 2.6.  Added write support for JP2 UUID, DataEntryURL,
     Palette and Component Mapping boxes, JPX Association, NumberList
     and DataReference boxes.  Added read support for JPX free,
